[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/bullseye.png" type="Texture" id=1]
[ext_resource path="res://Scenes/bullseyescene.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Area2D.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 26.8921

[node name="Bullseye" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
show_behind_parent = true
priority = 1.0
collision_layer = 1015808
script = ExtResource( 4 )

[node name="bullseye" type="Sprite" parent="Area2D"]
position = Vector2( 0.0704784, -0.0746727 )
scale = Vector2( 0.0691946, 0.0698348 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.173523, 0.310303 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Timer" type="Timer" parent="."]
[connection signal="draw" from="Area2D" to="." method="_on_Area2D_draw"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
